--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/style": "^0.8.0",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "class-variance-authority": "^0.7.1",
-    "sonner": "^2.0.6",
+    "material-react-table": "^3.2.1",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sonner": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,8 +28,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "tailwind-merge": "^2.6.0"
+    "typescript": "^5"
   }
 }
